--- a/McLabel/App.xaml
+++ b/McLabel/App.xaml
@@ -4,8 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:McLabel"
     xmlns:vmb="clr-namespace:McLabel.ViewModels.Base"
-    StartupUri="Views/MainWindow.xaml">
+    StartupUri="Views/Windows/MainWindow.xaml">
     <Application.Resources>
-        <vmb:ViewModelLocator x:Key="Locator" />
+        <ResourceDictionary>
+            <vmb:ViewModelLocator x:Key="Locator" />
+
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Templates/ViewDataTemplates.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
