Some changes in xml service

--- a/McLabel/Views/MainEditorView.xaml
+++ b/McLabel/Views/MainEditorView.xaml
@@ -4,12 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:McLabel.Views"
-    xmlns:vm="clr-namespace:McLabel.ViewModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:McLabel.ViewModels"
     d:DataContext="{d:DesignInstance {x:Type vm:MainEditorViewModel},
                                      IsDesignTimeCreatable=True}"
     d:DesignHeight="720"
     d:DesignWidth="1024"
+    FontFamily="Arial"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="ListBoxItemStyle1" TargetType="{x:Type ListBoxItem}">
