--- a/McLabel/Views/MainEditorView.xaml
+++ b/McLabel/Views/MainEditorView.xaml
@@ -2,6 +2,7 @@
     x:Class="McLabel.Views.MainEditorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:McLabel.Utils.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:McLabel.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -13,7 +14,9 @@
     FontFamily="Arial"
     mc:Ignorable="d">
     <UserControl.Resources>
+        <conv:ReversedBooleanToVisibiltyConverter x:Key="ReversedBooleanConverter" />
         <Style x:Key="ListBoxItemStyle1" TargetType="{x:Type ListBoxItem}">
+            <Setter Property="SnapsToDevicePixels" Value="True" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
@@ -22,7 +25,7 @@
                             Height="45"
                             Margin="3,5"
                             Background="{Binding Color,
-                                                 TargetNullValue=#aaccbb}"
+                                                 TargetNullValue=#aabbcc}"
                             CornerRadius="10">
                             <Grid Margin="5">
                                 <Grid.ColumnDefinitions>
@@ -111,8 +114,90 @@
                 Width="200"
                 Height="200"
                 Margin="10"
-                Background="DarkGray"
-                CornerRadius="10" />
+                Background="White"
+                BorderBrush="Black"
+                BorderThickness="1"
+                CornerRadius="10">
+                <Grid Margin="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Border
+                        Grid.RowSpan="7"
+                        Grid.ColumnSpan="3"
+                        Panel.ZIndex="100"
+                        Background="White"
+                        Visibility="{Binding IsItemSelected,
+                                             UpdateSourceTrigger=PropertyChanged,
+                                             Converter={StaticResource ReversedBooleanConverter}}">
+                        <TextBlock
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Foreground="#5c5c5c"
+                            Text="No item selected" />
+                    </Border>
+                    <TextBlock
+                        Grid.Row="0"
+                        Grid.ColumnSpan="3"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontWeight="Bold"
+                        Text="{Binding SelectedItem.Line2nd}"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.ColumnSpan="2"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="Zrobione:"
+                        TextAlignment="Center"
+                        TextWrapping="NoWrap" />
+                    <TextBlock
+                        Grid.Row="3"
+                        Grid.ColumnSpan="2"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="{Binding SelectedItem.Exp1Message}"
+                        TextAlignment="Center"
+                        TextWrapping="NoWrap" />
+                    <TextBlock
+                        Grid.Row="5"
+                        Grid.ColumnSpan="2"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="{Binding SelectedItem.Exp2Message}"
+                        TextAlignment="Center"
+                        TextWrapping="NoWrap" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.RowSpan="6"
+                        Grid.Column="3"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="15"
+                        FontWeight="Bold"
+                        Text="{Binding SelectedItem.Line1st}"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap">
+                        <TextBlock.LayoutTransform>
+                            <RotateTransform Angle="-90" />
+                        </TextBlock.LayoutTransform>
+                    </TextBlock>
+                </Grid>
+            </Border>
             <Grid Grid.Column="1" Margin="20">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
@@ -139,7 +224,9 @@
                     Grid.Row="0"
                     Grid.Column="1"
                     Margin="3"
-                    Text="{Binding SelectedItem.Name}" />
+                    IsEnabled="{Binding IsItemSelected}"
+                    Text="{Binding SelectedItem.Name,
+                                   UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock
                     Grid.Row="2"
                     Grid.Column="0"
@@ -151,6 +238,7 @@
                     Grid.Row="2"
                     Grid.Column="1"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp1Days}" />
                 <TextBlock
                     Grid.Row="3"
@@ -163,6 +251,7 @@
                     Grid.Row="3"
                     Grid.Column="1"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp1Hours}" />
                 <TextBlock
                     Grid.Row="4"
@@ -175,6 +264,7 @@
                     Grid.Row="4"
                     Grid.Column="1"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp1Minutes}" />
                 <TextBlock
                     Grid.Row="5"
@@ -187,6 +277,7 @@
                     Grid.Row="5"
                     Grid.Column="1"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp1Message}" />
                 <TextBlock
                     Grid.Row="1"
@@ -200,8 +291,10 @@
                     Grid.Column="1"
                     Margin="3"
                     DisplayMemberPath="Name"
+                    IsEnabled="{Binding IsItemSelected}"
                     ItemsSource="{Binding Categories}"
-                    Text="{Binding SelectedItem.Category}" />
+                    Text="{Binding SelectedItem.Category,
+                                   UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock
                     Grid.Row="0"
                     Grid.Column="2"
@@ -213,6 +306,7 @@
                     Grid.Row="0"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Line1st}" />
                 <TextBlock
                     Grid.Row="1"
@@ -225,6 +319,7 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Line2nd}" />
                 <TextBlock
                     Grid.Row="2"
@@ -237,6 +332,7 @@
                     Grid.Row="2"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp2Days}" />
                 <TextBlock
                     Grid.Row="3"
@@ -249,6 +345,7 @@
                     Grid.Row="3"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp2Hours}" />
                 <TextBlock
                     Grid.Row="4"
@@ -261,6 +358,7 @@
                     Grid.Row="4"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp2Minutes}" />
                 <TextBlock
                     Grid.Row="5"
@@ -273,6 +371,7 @@
                     Grid.Row="5"
                     Grid.Column="3"
                     Margin="3"
+                    IsEnabled="{Binding IsItemSelected}"
                     Text="{Binding SelectedItem.Exp2Message}" />
             </Grid>
         </Grid>
