--- a/McLabel/Views/MainEditorView.xaml
+++ b/McLabel/Views/MainEditorView.xaml
@@ -124,18 +124,18 @@
                 BorderBrush="Black"
                 BorderThickness="1"
                 CornerRadius="10">
-                <Grid Margin="5">
+                <Grid Margin="10,5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="auto" />
-                        <RowDefinition Height="*" />
                         <RowDefinition Height="auto" />
-                        <RowDefinition Height="*" />
                         <RowDefinition Height="auto" />
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
@@ -155,12 +155,13 @@
                     </Border>
                     <TextBlock
                         Grid.Row="0"
-                        Grid.ColumnSpan="3"
-                        HorizontalAlignment="Center"
+                        Grid.ColumnSpan="2"
+                        HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        FontSize="15"
+                        FontSize="18"
                         FontWeight="Bold"
-                        Text="{Binding SelectedItem.Line2nd}"
+                        Text="{Binding SelectedItem.Line2nd,
+                                       FallbackValue='slodkie pikle chl'}"
                         TextAlignment="Center"
                         TextWrapping="Wrap" />
                     <TextBlock
@@ -168,8 +169,9 @@
                         Grid.ColumnSpan="2"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         FontWeight="Bold"
-                        Text="Zrobione:"
+                        Text="Zrobiono:"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
@@ -177,17 +179,21 @@
                         Grid.Column="0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeNow,
+                                       FallbackValue='16.3.23',
                                        StringFormat=d.M.yy}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
                         Grid.Row="2"
                         Grid.Column="1"
-                        HorizontalAlignment="Right"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeNow,
-                                       StringFormat=HH:mm}"
+                                       FallbackValue='17:12',
+                                       StringFormat=H:mm}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
@@ -195,8 +201,10 @@
                         Grid.ColumnSpan="2"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         FontWeight="Bold"
-                        Text="{Binding SelectedItem.Exp1Message}"
+                        Text="{Binding SelectedItem.Exp1Message,
+                                       FallbackValue='Gotowe'}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
@@ -204,17 +212,21 @@
                         Grid.Column="0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeReady1,
+                                       FallbackValue='16.3.23',
                                        StringFormat=d.M.yy}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
                         Grid.Row="4"
                         Grid.Column="1"
-                        HorizontalAlignment="Right"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeReady1,
-                                       StringFormat=HH:mm}"
+                                       FallbackValue='17:27',
+                                       StringFormat=H:mm}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
@@ -222,8 +234,10 @@
                         Grid.ColumnSpan="2"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         FontWeight="Bold"
-                        Text="{Binding SelectedItem.Exp2Message}"
+                        Text="{Binding SelectedItem.Exp2Message,
+                                       FallbackValue='Koniec:'}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
@@ -231,29 +245,34 @@
                         Grid.Column="0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeReady2,
+                                       FallbackValue='17.3.23',
                                        StringFormat=d.M.yy}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
                         Grid.Row="6"
                         Grid.Column="1"
-                        HorizontalAlignment="Right"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{Binding FontSize}"
                         Text="{Binding DateTimeReady2,
+                                       FallbackValue='5:12',
                                        StringFormat=HH:mm}"
                         TextAlignment="Center"
                         TextWrapping="NoWrap" />
                     <TextBlock
-                        Grid.Row="1"
+                        Grid.Row="0"
                         Grid.RowSpan="6"
                         Grid.Column="3"
                         HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        FontSize="17"
+                        VerticalAlignment="Bottom"
+                        FontSize="18"
                         FontWeight="Bold"
                         SnapsToDevicePixels="True"
-                        Text="{Binding SelectedItem.Line1st}"
+                        Text="{Binding SelectedItem.Line1st,
+                                       FallbackValue='rozmrazanie'}"
                         TextAlignment="Center"
                         TextWrapping="Wrap">
                         <TextBlock.LayoutTransform>
